--- a/pom.xml
+++ b/pom.xml
@@ -369,11 +369,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/org.apache.beam/beam-runners-google-cloud-dataflow-java -->
-        <dependency>
-            <groupId>org.apache.beam</groupId>
-            <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
-            <version>2.43.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.beam</groupId>-->
+<!--            <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>-->
+<!--            <version>2.43.0</version>-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-firestore -->
         <dependency>
